--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,36 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+.bg-primary{
+  background-color: #326358;
+}
+
+.text-primary {
+  color: #326358;
+}
+
+.color-primary {
+  color: #326358;
+}
+
+.border-primary {
+  border-color: #326358;
+}
+
+.outline-primary {
+  outline-color: #326358;
+}
+
+.ring-primary {
+  outline-color: #326358;
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none !important ;
+  box-shadow: 0 0 0 2px rgba(70, 139, 124, 0.5);
+
+}
